Fix navbar overflow

--- a/client/src/assets/stylesheets/layout/header.scss
+++ b/client/src/assets/stylesheets/layout/header.scss
@@ -4,6 +4,7 @@
   background: $gray-1;
   padding: 0 24px;
   margin-bottom: 24px;
+  overflow: hidden;
 
   li {
     display: inline;
